Rework of the demo's design, add private doc

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -1,91 +1,1 @@
-<!doctype html>
-<html lang="fr">
-	<head>
-		<meta charset="utf8">
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-		<title> Essai</title>
-	</head>
-	<body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <h3>On veut juste faire quelques tests en JS, ouvre la console!</h3>
-                    <div id="editor"></div>
-                    <br>
-                    <p>
-                        <strong>Nombre d'opérations distantes en attente d'intégration : </strong><span id="compteur" class="text-success">0 opération(s)</span>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <% if(newDoc === true) { %>
-            <div class="modal fade" id="modalNewDoc" tabindex="-1" role="dialog" aria-labelledby="modalNewDocLabel" data-backdrop="static" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title" id="modalNewDocLabel">New doc</h4>
-                        </div>
-                        <div class="modal-body">
-                            The document you tried to access doesn't exist. Do you want to create it ?
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal" onclick="redirect()">No</button>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="createDoc()">Yes</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <% } %>
-
-        <script src="assets/js/jquery-2.1.0.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/ace/src-noconflict/ace.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="assets/js/mute-client/build/mute-client.js"></script>
-        <script src="assets/js/awareness-adapter.js"></script>
-        <script>
-            var coordinator;
-            var editor;
-            var network;
-            var awareness;
-
-			"use strict";
-            <% if(newDoc === false) { %>
-                initCollaborativeEditor();
-            <% } else { %>
-                coordinator = new Mute.Coordinator('<%= docID %>');
-                editor = new Mute.AceEditorAdapter('editor', coordinator);
-                
-                function redirect() {
-                    location.href = location.origin;
-                }
-
-                function createDoc() {
-                    $.getJSON('ajax/createDoc/<%= docID %>', function (data) {
-                        if(data.OK !== null && data.OK !== undefined && data.OK === true) {
-                            coordinator.setEditor(editor);
-                            var network = new Mute.SocketIOAdapter(coordinator);
-                            coordinator.setNetwork(network);
-                            var awareness = new AwarenessAdapter(coordinator, $('#compteur'));
-                        }
-                    });
-                }
-
-                $('#modalNewDoc').modal('show');
-            <% } %>
-
-            function initCollaborativeEditor() {
-                coordinator = new Mute.Coordinator('<%= docID %>');
-                console.log(coordinator);
-                editor = new Mute.AceEditorAdapter('editor', coordinator);
-                coordinator.setEditor(editor);
-                network = new Mute.SocketIOAdapter(coordinator);
-                coordinator.setNetwork(network);
-                awareness = new AwarenessAdapter(coordinator, $('#compteur'));
-            }
-            console.log('docID: <%= docID %>');
-        </script>
-	</body>
-</html>
+<div id="<%= editorID %>" style="width: 95%;"></div>
