--- a/views/awareness.ejs
+++ b/views/awareness.ejs
@@ -1,3 +1,3 @@
 <p>
-    <strong>Number of distant operations waiting for integration: </strong><span id="<%= awarenessID %>" class="text-success">0 opération(s)</span>
+    <strong>Number of distant operations waiting for integration: </strong><span id="<%= awarenessID %>" class="text-success">0 operation(s)</span>
 </p>
