Add contact form

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -19,7 +19,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li <% if(page==='home') ***REMOVED*** %>class="active" <% ***REMOVED*** %> ><a href="/">Home</a></li>
 				<li <% if(page==='guide') ***REMOVED*** %>class="active" <% ***REMOVED*** %> ><a href="/guide">Guide</a></li>
-				<li <% if(page==='about') ***REMOVED*** %>class="active" <% ***REMOVED*** %> ><a href="/about">About</a></li>
+				<!-- <li <% if(page==='about') ***REMOVED*** %>class="active" <% ***REMOVED*** %> ><a href="/about">About</a></li> -->
 				<li <% if(page==='contact') ***REMOVED*** %>class="active" <% ***REMOVED*** %> ><a href="/contact">Contact</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
