Add contact form

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -19,7 +19,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li <% if(page==='home') { %>class="active" <% } %> ><a href="/">Home</a></li>
 				<li <% if(page==='guide') { %>class="active" <% } %> ><a href="/guide">Guide</a></li>
-				<li <% if(page==='about') { %>class="active" <% } %> ><a href="/about">About</a></li>
+				<!-- <li <% if(page==='about') { %>class="active" <% } %> ><a href="/about">About</a></li> -->
 				<li <% if(page==='contact') { %>class="active" <% } %> ><a href="/contact">Contact</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
