Add remote cursors and remote selection display

--- a/assets/css/mute.css
+++ b/assets/css/mute.css
@@ -43,6 +43,11 @@ body {
     margin: 10 auto 10px;
 }
 
+.test {
+  background-color: black;
+  width: 300px;
+}
+
 ul.menu {
   margin: 0;
   padding: 0;
