--- a/views/css.ejs
+++ b/views/css.ejs
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/css/awareness.css">
 <link rel="stylesheet" href="assets/css/mute.css">
 <link rel="stylesheet" href="assets/css/highlightjs.min.css">
