--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -4,7 +4,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-body <% if(error === true) { %> bg-danger <% } if(info ===true) { %> bg-info <% } %>">
-                        <h4 class="modal-title">Document already existing</h4>
+                        <h4 class="modal-title"><%= notificationTitle %></h4>
                         <hr>
                         <p><%= msg %></p>
                         <button type="button" class="btn btn-default pull-right" data-dismiss="modal">Close</button>
