Add remote cursors and remote selection display

--- a/assets/css/mute.css
+++ b/assets/css/mute.css
@@ -43,6 +43,11 @@ body ***REMOVED***
     margin: 10 auto 10px;
 ***REMOVED***
 
+.test ***REMOVED***
+  background-color: black;
+  width: 300px;
+***REMOVED***
+
 ul.menu ***REMOVED***
   margin: 0;
   padding: 0;
