--- a/views/awareness.ejs
+++ b/views/awareness.ejs
@@ -1,3 +1,4 @@
-<p>
-    <strong>Number of distant operations waiting for integration: </strong><span id="<%= awarenessID %>" class="text-success">0 operation(s)</span>
+<p style="padding-top: 7px;">
+    <strong>Number of distant operations waiting for integration: </strong><span id="<%= nbOperationsItemID %>" class="text-success">0 operation(s)</span><br>
+    <strong>Date of last modification : </strong><span id="<%= lastModificationDateItemID %>"></span><br>
 </p>
